# Coale-Insights

./: DATABASE_INTEGRATION_GUIDE.md  INSIGHTS_DOCUMENTATION.md  QUICK_REFERENCE.md  README.md  hooks.py  hooks.py.dead  migration_helper.py  pyproject.toml  pytest.ini  requirements-export.txt  requirements-ml.txt  requirements-nlp.txt  requirements-vectordb.txt  requirements.txt
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: router.ts
frontend/src/components/: AppShell.vue  DashboardCard.vue  Sidebar.vue  (+1 more)
frontend/src2/: App.vue  main.ts  router.ts  session.ts  socket.ts
insights/: hooks.py  patches.txt  utils.py
insights/agents/: __init__.py  advanced_predictive_analytics_agent.py  base.py  budget_variance_agent.py  cross_dashboard_search_agent.py  customer_agent.py  esg_agent.py  executive_agent.py  financial_agent.py  general_agent.py  hr_agent.py  inventory_agent.py  manufacturing_agent.py  marketing_agent.py  procurement_agent.py  query_router.py  registry.py  risk_agent.py  sales_agent.py  tax_agent.py
insights/ai/: __init__.py  base_provider.py  ollama_client.py  openrouter_client.py  provider_factory.py
insights/ai_reasoning/: model_router.py
insights/analytics/: __init__.py  data_collectors.py  ml_engine.py
insights/api/: __init__.py  ai_insights.py  alerts.py  app.py  dashboard_chat.py  dashboards.py  data_sources.py  data_store.py  diagnostics.py  documents.py  files.py  ml.py  notebooks.py  permissions.py  response.py  settings.py  setup.py  shared.py  subscription.py  telemetry.py  translations.py  user.py  workbooks.py
insights/cache_management/: cache_manager.py
insights/config/: settings.py
insights/fixtures/: custom_field_customer_intelligence.json
insights/integrations/: erpnext_v15_integrator.py
insights/ml/: __init__.py  abc_xyz_classification.py  advanced_predictive_analytics.py  base.py  budget_variance_intelligence.py  cross_dashboard_search.py  customer_intelligence.py  customer_segmentation.py  demand_forecasting.py  esg_intelligence.py  executive_intelligence.py  financial_intelligence.py  hr_intelligence.py  inventory_intelligence.py  manufacturing_intelligence.py  marketing_intelligence.py  payment_prediction.py  presentation_service.py  procurement_intelligence.py  product_recommendations.py  risk_intelligence.py  sales_forecasting.py  sales_intelligence.py  scheduler.py  strategic_finance_intelligence.py  tax_intelligence.py
insights/overrides/: __init__.py  dashboard_chart.py
insights/patches/: convert_duration_to_float.py  create_ai_analytics_dashboards.py  fix_ai_dashboard_charts.py  populate_ai_dashboards.py  remove_v2_doctypes.py
insights/performance/: performance_pipeline.py
insights/processing/: processing_pipeline.py  task_processors.py
insights/reports/: executive_reports.py
insights/tests/: run_tests.py  test_agent_responses.py  test_agents.py  test_ai_insights_integration.py  test_api_integration.py  test_api_refactoring.py  test_migration_helper.py  test_ml_functionality.py  utils.py
insights/www/: insights.py  insights_v2.py
(+119 files in other folders)
