[project]
name = "insights"
authors = [
    { name = "Powerful Reporting Tool for Frappe Apps", email = "hello@frappe.io"}
]
description = "Open Source Business Intelligence Tool"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # frappe develop (v17) runs on Python 3.14, which has NO working pandas 2.2.x
    # wheels — pandas' datetime C code SEGFAULTS there, silently killing the
    # background worker so dashboards hang forever ("did not finish in time").
    # pandas 2.3.3+ ships working Python 3.14 wheels (verified). numpy is kept in
    # a range proven compatible. ibis-framework allows pandas <3.
    "numpy>=1.26.4,<2.2",
    "pandas>=2.3.3,<2.4",
    "SQLAlchemy>=2.0.36",
    "python-telegram-bot==21.4",
    "duckdb~=1.3.0",
    "sqlglot<28.0.0",
    "ibis-framework~=10.5.0",
    "ibis-framework[duckdb]",
    "ibis-framework[mysql]",
    "ibis-framework[sqlite]",
    "ibis-framework[clickhouse]",
    "ibis-framework[postgres]",
    # "ibis-framework[mssql]",
    # "ibis-framework[bigquery]",
]

[project.optional-dependencies]
ml = ["scikit-learn>=1.3.0", "xgboost>=2.0.0", "lightgbm>=4.1.0", "prophet>=1.1.4"]
nlp = ["transformers>=4.36.0", "spacy>=3.7.0", "langchain>=0.0.350"]
vectordb = ["chromadb>=0.4.0", "faiss-cpu>=1.7.4", "elasticsearch>=8.11.0"]
export = ["plotly>=5.17.0", "weasyprint>=60.0", "python-pptx>=0.6.23", "reportlab>=4.0.0"]
all = ["insights[ml,nlp,vectordb,export]"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"


# Frappe Cloud / bench reads this to check the app is compatible with the
# bench's Frappe version before adding it. Without it, "Add app from GitHub"
# fails with: "Could not find compatible Frappe version in pyproject.toml".
# Covers Frappe v15, v16 and the v17 develop line.
[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<18.0.0"


[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B017", # assertRaises(Exception) - should be more specific
    "B018", # useless expression, not assigned to anything
    "B023", # function doesn't bind loop variable - will have last iteration's value
    "B904", # raise inside except without from
    "E101", # indentation contains mixed spaces and tabs
    "E402", # module level import not at top of file
    "E501", # line too long
    "E741", # ambiguous variable name
    "E731", # do not assign a lambda expression, use a def
    # "F401", # "unused" imports
    "F403", # can't detect undefined names from * import
    "F405", # can't detect undefined names from * import
    "F722", # syntax error in forward type annotation
    "W191", # indentation contains tabs
    "RUF001", # string contains ambiguous unicode character
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
